--- a/views/reverse.erb
+++ b/views/reverse.erb
@@ -8,8 +8,7 @@
 
   <body>
     <h1>The Ultimate String Reverser</h1>
-
-    <form method="POST" action="/reverse">
+    <form method="post" action="/reverse">
       <input type="text" name="string">
       <input type="submit">
     </form>
